Fix for klocwork issues.
This change includes fix for all klocwork reported issues
in native and java layer.

Change-Id: Ibba5d478e64251636c8ef514c52b9e9bd6f36442
Signed-off-by: G S Senthil Kumar <senthil.gs@samsung.com>
Reviewed-on: https://gerrit.iotivity.org/gerrit/5749
Tested-by: jenkins-iotivity <jenkins-iotivity@opendaylight.org>
Reviewed-by: Madan Lanka <lanka.madan@samsung.com>